// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Button Bottoni con icona 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <button
        aria-label={null}
        className="btn-icon btn btn-primary btn-lg"
        onClick={[Function]}
      >
        <svg
          className="icon icon-white"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.7L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
         Icon Button Large
      </button>
       
      <button
        aria-label={null}
        className="btn-icon btn btn-success"
        onClick={[Function]}
      >
        <svg
          className="icon icon-white"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.7L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
         Icon Button
      </button>
       
      <button
        aria-label={null}
        className="btn-icon btn btn-danger btn-sm"
        onClick={[Function]}
      >
        <svg
          className="icon icon-secondary"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.7L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
         Icon Button Small
      </button>
       
      <button
        aria-label={null}
        className="btn-icon btn btn-info btn-xs"
        onClick={[Function]}
      >
        <svg
          className="icon icon-danger"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1.7L9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
         Icon Button Extra Small
      </button>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Button Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-primary"
          onClick={[Function]}
        >
          Primary
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-primary"
          onClick={[Function]}
        >
          Primary
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-secondary"
          onClick={[Function]}
        >
          Secondary
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-secondary"
          onClick={[Function]}
        >
          Secondary
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-success"
          onClick={[Function]}
        >
          Success
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-success"
          onClick={[Function]}
        >
          Success
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-info"
          onClick={[Function]}
        >
          Info
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-info"
          onClick={[Function]}
        >
          Info
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-danger"
          onClick={[Function]}
        >
          Danger
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-danger"
          onClick={[Function]}
        >
          Danger
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-warning"
          onClick={[Function]}
        >
          Warning
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-warning"
          onClick={[Function]}
        >
          Warning
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-link"
          onClick={[Function]}
        >
          Link
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-link"
          onClick={[Function]}
        >
          Link
           Outline
        </button>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Button Esempi interattivi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      aria-label={null}
      className="btn btn-primary btn- "
      disabled={false}
      onClick={[Function]}
    >
      
       
      Primary
       
       
       
      
       
       
    </button>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Button Sfondo scuro 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bg-dark py-1"
    >
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-primary"
          onClick={[Function]}
        >
          Primary
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-primary"
          onClick={[Function]}
        >
          Primary
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-secondary"
          onClick={[Function]}
        >
          Secondary
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-secondary"
          onClick={[Function]}
        >
          Secondary
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-success"
          onClick={[Function]}
        >
          Success
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-success"
          onClick={[Function]}
        >
          Success
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-info"
          onClick={[Function]}
        >
          Info
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-info"
          onClick={[Function]}
        >
          Info
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-danger"
          onClick={[Function]}
        >
          Danger
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-danger"
          onClick={[Function]}
        >
          Danger
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-warning"
          onClick={[Function]}
        >
          Warning
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-warning"
          onClick={[Function]}
        >
          Warning
           Outline
        </button>
      </div>
      <div
        className="mb-2"
      >
        <button
          aria-label={null}
          className="btn btn-link"
          onClick={[Function]}
        >
          Link
        </button>
         
        <button
          aria-label={null}
          className="btn btn-outline-link"
          onClick={[Function]}
        >
          Link
           Outline
        </button>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Button Stato Attivo 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <span>
        <button
          aria-label={null}
          className="btn btn-primary"
          onClick={[Function]}
        >
          Primary
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-secondary"
          onClick={[Function]}
        >
          Secondary
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-success"
          onClick={[Function]}
        >
          Success
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-info"
          onClick={[Function]}
        >
          Info
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-danger"
          onClick={[Function]}
        >
          Danger
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-warning"
          onClick={[Function]}
        >
          Warning
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-link"
          onClick={[Function]}
        >
          Link
        </button>
         
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Button Stato Disabilitato 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <span>
        <button
          aria-label={null}
          className="btn btn-primary disabled"
          disabled={true}
          onClick={[Function]}
        >
          Primary
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-secondary disabled"
          disabled={true}
          onClick={[Function]}
        >
          Secondary
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-success disabled"
          disabled={true}
          onClick={[Function]}
        >
          Success
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-info disabled"
          disabled={true}
          onClick={[Function]}
        >
          Info
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-danger disabled"
          disabled={true}
          onClick={[Function]}
        >
          Danger
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-warning disabled"
          disabled={true}
          onClick={[Function]}
        >
          Warning
        </button>
         
      </span>
      <span>
        <button
          aria-label={null}
          className="btn btn-link disabled"
          disabled={true}
          onClick={[Function]}
        >
          Link
        </button>
         
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Button Varianti di dimensione 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <div>
        <button
          aria-label={null}
          className="btn btn-primary btn-lg"
          onClick={[Function]}
        >
          Primary Large
        </button>
         
        <button
          aria-label={null}
          className="btn btn-secondary btn-lg"
          onClick={[Function]}
        >
          Secondary Large
        </button>
         
        <div
          className="mt-3"
        />
        <button
          aria-label={null}
          className="btn btn-primary btn-sm"
          onClick={[Function]}
        >
          Primary Small
        </button>
         
        <button
          aria-label={null}
          className="btn btn-secondary btn-sm"
          onClick={[Function]}
        >
          Secondary Small
        </button>
         
        <div
          className="mt-3"
        />
        <button
          aria-label={null}
          className="btn btn-primary btn-xs"
          onClick={[Function]}
        >
          Primary Mini
        </button>
         
        <button
          aria-label={null}
          className="btn btn-secondary btn-xs"
          onClick={[Function]}
        >
          Secondary Mini
        </button>
         
        <div
          className="mt-3"
        />
        <button
          aria-label={null}
          className="btn btn-primary btn-block"
          onClick={[Function]}
        >
          Primary Block
        </button>
         
        <button
          aria-label={null}
          className="btn btn-secondary btn-block"
          onClick={[Function]}
        >
          Secondary Block
        </button>
         
      </div>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
